--- a/index.html
+++ b/index.html
@@ -120,46 +120,31 @@
 		</section>
 
 		<section class="cardsSection">
-			<article
-				class="cardsArticleCard"
-				data-aos="zoom-in-up"
-				data-aos-delay="200"
-				data-aos-duration="1500"
-			>
+			<article class="cardsArticleCard">
 				<img
-					src="images/cliente.jpeg"
+					src="images/cliente.jpg"
 					alt="imagen cliente"
 					class="imgClient"
 				/>
 				<p class="cardText">
-					"Mas rapido y mas barato que viajar en colectivo, super
+					"Más rápido y barato que viajar en colectivo, super
 					recomendado!"
 				</p>
 				<p class="cardFooter">Bautista Morelli - 24 años</p>
 			</article>
-			<article
-				class="cardsArticleCard"
-				data-aos="zoom-in-up"
-				data-aos-delay="200"
-				data-aos-duration="1500"
-			>
+			<article class="cardsArticleCard">
 				<img
-					src="images/cliente3.JPG"
+					src="images/cliente3.jpg"
 					alt="imagen cliente"
 					class="imgClient"
 				/>
 				<p class="cardText">
-					"Tenia que viajar de emergencia y no conseguia transporte,
-					por suerte encontre esta app y me soluciono todo"
+					"Tenía que viajar de emergencia y no conseguía transporte,
+					por suerte encontré esta app y me solucionó todo"
 				</p>
 				<p class="cardFooter">Lucas Perretta - 58 años</p>
 			</article>
-			<article
-				class="cardsArticleCard"
-				data-aos="zoom-in-up"
-				data-aos-delay="200"
-				data-aos-duration="1500"
-			>
+			<article class="cardsArticleCard">
 				<img
 					src="images/cliente2.jpg"
 					alt="imagen cliente"
