--- a/index.html
+++ b/index.html
@@ -168,19 +168,19 @@
 		<!-- Footer -->
 		<footer>
 			<article>
-				<a href=""
+				<a href="https://www.instagram.com/"
 					><img
 						src="images/instagram.svg"
 						alt="Instagram"
 						class="icon whiteSvg"
 				/></a>
-				<a href=""
+				<a href="https://www.youtube.com/"
 					><img
 						src="images/youtube.svg"
 						alt="YouTube"
 						class="icon whiteSvg"
 				/></a>
-				<a href=""
+				<a href="https://twitter.com/"
 					><img
 						src="images/twitter.svg"
 						alt="Twitter"
@@ -205,13 +205,13 @@
 			<section class="downloads">
 				<article>
 					<p>Descarga la app</p>
-					<a href=""
+					<a href="https://play.google.com/"
 						><img
 							src="images/googlePlay.svg"
 							alt=""
 							class="downloadApp"
 					/></a>
-					<a href=""
+					<a href="https://www.apple.com/app-store/"
 						><img
 							src="images/AppStore.svg"
 							alt=""
