--- a/pages/producto.html
+++ b/pages/producto.html
@@ -93,7 +93,7 @@
 			</article>
 			<img
 				src="../images/appFrontCrop.png"
-				alt=""
+				alt="App picture"
 				class="productImage"
 				data-aos="fade-up"
 				data-aos-duration="1000"
@@ -102,7 +102,7 @@
 		<section class="bannerSection noPaddingBottom reverseWrap">
 			<img
 				src="../images/AppViajeCrop.png"
-				alt=""
+				alt="App picture"
 				class="productImage"
 				data-aos="fade-up"
 				data-aos-duration="1000"
@@ -126,16 +126,20 @@
 					Carpooleo ya esta disponible para descarga
 				</p>
 				<div class="flexRowCenter">
-					<img
-						src="../images/googlePlay.svg"
-						alt=""
-						class="productDownload"
-					/>
-					<img
+					<a href="https://play.google.com/">
+						<img
+							src="../images/googlePlay.svg"
+							alt="Google Play Download"
+							class="productDownload"
+						/>
+					</a>
+					<a href="https://www.apple.com/app-store/">
+						<img
 						src="../images/AppStore.svg"
-						alt=""
+						alt="App Store Download"
 						class="productDownload"
 					/>
+					</a>
 				</div>
 			</article>
 			<img
@@ -150,19 +154,19 @@
 		<!-- Footer -->
 		<footer>
 			<article>
-				<a href=""
+				<a href="https://www.instagram.com/"
 					><img
 						src="../images/instagram.svg"
 						alt="Instagram"
 						class="icon whiteSvg"
 				/></a>
-				<a href=""
+				<a href="https://www.youtube.com/"
 					><img
 						src="../images/youtube.svg"
 						alt="YouTube"
 						class="icon whiteSvg"
 				/></a>
-				<a href=""
+				<a href="https://twitter.com/"
 					><img
 						src="../images/twitter.svg"
 						alt="Twitter"
@@ -186,13 +190,13 @@
 			<section class="downloads">
 				<article>
 					<p>Descarga la app</p>
-					<a href=""
+					<a href="https://play.google.com/"
 						><img
 							src="../images/googlePlay.svg"
 							alt=""
 							class="downloadApp"
 					/></a>
-					<a href=""
+					<a href="https://www.apple.com/app-store/"
 						><img
 							src="../images/AppStore.svg"
 							alt=""
