Added target="_blank" in <a> tags

--- a/pages/producto.html
+++ b/pages/producto.html
@@ -5,7 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- Descripcion -->
-		<meta name="description" content="Descubre nuestra aplicación y descárgala">
+		<meta
+			name="description"
+			content="Descubre nuestra aplicación y descárgala"
+		/>
 		<!-- AOS Framework Stylesheet -->
 		<link
 			href="https://unpkg.com/aos@2.3.1/dist/aos.css"
@@ -18,7 +21,7 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="../css/scssStyles.css"/>
+		<link rel="stylesheet" href="../css/scssStyles.css" />
 		<title>Producto</title>
 		<link rel="shortcut icon" href="../images/logo.png" />
 	</head>
@@ -80,7 +83,9 @@
 		</header>
 
 		<!-- Content -->
-		<section class="bannerSection purpleBackground noPaddingBottom flexWrap">
+		<section
+			class="bannerSection purpleBackground noPaddingBottom flexWrap"
+		>
 			<article class="bannerArticle">
 				<h2 class="bannerTitle">
 					Intuitiva, fácil de utilizar y segura
@@ -126,19 +131,19 @@
 					Carpooleo ya esta disponible para descarga
 				</p>
 				<div class="flexRowCenter">
-					<a href="https://play.google.com/">
+					<a href="https://play.google.com/" target="_blank">
 						<img
 							src="../images/googlePlay.svg"
 							alt="Google Play Download"
 							class="productDownload"
 						/>
 					</a>
-					<a href="https://www.apple.com/app-store/">
+					<a href="https://www.apple.com/app-store/" target="_blank">
 						<img
-						src="../images/AppStore.svg"
-						alt="App Store Download"
-						class="productDownload"
-					/>
+							src="../images/AppStore.svg"
+							alt="App Store Download"
+							class="productDownload"
+						/>
 					</a>
 				</div>
 			</article>
@@ -154,19 +159,19 @@
 		<!-- Footer -->
 		<footer>
 			<article>
-				<a href="https://www.instagram.com/"
+				<a href="https://www.instagram.com/" target="_blank"
 					><img
 						src="../images/instagram.svg"
 						alt="Instagram"
 						class="icon whiteSvg"
 				/></a>
-				<a href="https://www.youtube.com/"
+				<a href="https://www.youtube.com/" target="_blank"
 					><img
 						src="../images/youtube.svg"
 						alt="YouTube"
 						class="icon whiteSvg"
 				/></a>
-				<a href="https://twitter.com/"
+				<a href="https://twitter.com/" target="_blank"
 					><img
 						src="../images/twitter.svg"
 						alt="Twitter"
@@ -190,13 +195,13 @@
 			<section class="downloads">
 				<article>
 					<p>Descarga la app</p>
-					<a href="https://play.google.com/"
+					<a href="https://play.google.com/" target="_blank"
 						><img
 							src="../images/googlePlay.svg"
 							alt=""
 							class="downloadApp"
 					/></a>
-					<a href="https://www.apple.com/app-store/"
+					<a href="https://www.apple.com/app-store/" target="_blank"
 						><img
 							src="../images/AppStore.svg"
 							alt=""
