--- a/404.html
+++ b/404.html
@@ -103,19 +103,19 @@
 		<!-- Footer -->
 		<footer>
 			<article>
-				<a href=""
+				<a href="https://www.instagram.com/" target="_blank"
 					><img
 						src="/images/instagram.svg"
 						alt="Instagram"
 						class="icon whiteSvg"
 				/></a>
-				<a href=""
+				<a href="https://www.youtube.com/" target="_blank"
 					><img
 						src="/images/youtube.svg"
 						alt="YouTube"
 						class="icon whiteSvg"
 				/></a>
-				<a href=""
+				<a href="https://twitter.com/" target="_blank"
 					><img
 						src="/images/twitter.svg"
 						alt="Twitter"
@@ -140,13 +140,13 @@
 			<section class="downloads">
 				<article>
 					<p>Descarga la app</p>
-					<a href=""
+					<a href="https://play.google.com/" target="_blank"
 						><img
 							src="/images/googlePlay.svg"
 							alt=""
 							class="downloadApp"
 					/></a>
-					<a href=""
+					<a href="https://www.apple.com/app-store/" target="_blank"
 						><img
 							src="/images/AppStore.svg"
 							alt=""
