Fixed img problem

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		<section class="cardsSection">
 			<article class="cardsArticleCard">
 				<img
-					src="images/cliente.jpg"
+					src="images/client.jpg"
 					alt="imagen cliente"
 					class="imgClient"
 				/>
@@ -134,7 +134,7 @@
 			</article>
 			<article class="cardsArticleCard">
 				<img
-					src="images/cliente3.jpg"
+					src="images/client3.jpg"
 					alt="imagen cliente"
 					class="imgClient"
 				/>
@@ -146,7 +146,7 @@
 			</article>
 			<article class="cardsArticleCard">
 				<img
-					src="images/cliente2.jpg"
+					src="images/client2.jpg"
 					alt="imagen cliente"
 					class="imgClient"
 				/>
